--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,12 @@ Size=400,400
 Collapsed=0
 
 [Window][Sorting Algorithm Window]
-Pos=78,11
+Pos=93,61
 Size=1729,713
+Collapsed=0
+
+[Window][Dear ImGui Demo]
+Pos=651,20
+Size=550,680
 Collapsed=0
 
